관리자 권한으로 실행 기능 추가 1.12.2 모듈 제거